# backend-challenge

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  manage.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
app/app/: settings.py
app/core/: models.py
app/core/migrations/: 0002_electrocardiogram_lead.py
app/electrocardiograms/: apps.py  serializers.py  urls.py  views.py
app/electrocardiograms/tests/: test_electrocardiograms_api.py
ecg/: .env.ecg.sample  .pre-commit-config.yaml  Dockerfile  README.md  __init__.py  config.py  main.py  pyproject.toml  views.py
ecg/api/: main.py  schemas.py
ecg/api/dependencies/: auth.py  database.py
ecg/api/routers/: admin.py  auth.py  ecg.py
ecg/app/: manage.py
ecg/app/connector/: admin.py  models.py  operations.py  permissions.py  serializers.py  urls.py  views.py
ecg/app/ecg/: asgi.py  settings.py  urls.py  wsgi.py
ecg/cli/: database.py
ecg/config/: requirements.txt
ecg/domains/admin/: exceptions.py  models.py  repositories.py  services.py
ecg/domains/ecg/: exceptions.py  models.py  (+2 more)
ecg/sql/: admin.py  ecg.py
other/: mongosetup.py
src/: main.py
src/config/: config.py
src/database/: database_handler.py  mongodb_database.py  volatile_database.py
src/models/: ecg_models.py  login_models.py
src/processor/: basic_processor.py
src/routers/: ecg.py  user.py
src/utilities/: login_utils.py  record.py
tests/: basic_processor_test.py  conftest.py  login_utils_test.py  main_test.py  record_test.py  test_main.py
(+18 files in other folders)
